# dpshooter

./: LICENSE  README.md  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/dualphoneshooter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/dualphoneshooter/: MainActivity.java  OpenGLProcessor.java  OpenGLUtils.java  SplashActivity.java
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dualphoneshooter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/java/src/org/opencv/calib3d/: Calib3d.java
sdk/java/src/org/opencv/core/: Core.java
sdk/java/src/org/opencv/imgproc/: Imgproc.java
sdk/java/src/org/opencv/videoio/: Videoio.java
sdk/java/src/org/opencv/ximgproc/: Ximgproc.java
sdk/native/jni/: OpenCV-arm64-v8a.mk  OpenCV.mk
sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
sdk/native/jni/include/opencv2/: cvconfig.h
